<?xml version="1.0"?>
<package format="3">
  <name>ros2_slam</name>
  <version>0.1.0</version>
  <description>A ROS2 package with LiDAR Publisher and SLAM Node</description>
  <maintainer email="hoon6049@hanyang.ac.kr">Donghoon Oh</maintainer>
  <license>Apache License 2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Python 노드 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
